--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2053,7 +2053,7 @@ button {
     flex-shrink: initial;
     flex-basis: auto;
     word-break: break-word;
-    padding-right: 2rem;
+    padding-left: 2rem;
   }
   .cid-tbybP14nDW .navbar .navbar-toggler {
     flex-basis: auto;
@@ -2091,7 +2091,7 @@ button {
   flex-shrink: 0;
   align-items: center;
   margin-right: 0;
-  padding: 10px 30px !important;
+  padding: 10px 10px !important;
   transition: all 0.3s;
   word-break: break-word;
   z-index: 1;
