--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1051,7 +1051,7 @@ body {
   font-size: 5.46875rem;
 }
 .display-2 {
-  font-family: 'ArbFONTS-ExpoArabic-Book';
+  font-family: 'ArbFONTS-kfnl';
   font-size: 2rem;
   line-height: 1.1;
 }
